# radar-politicos

./: .gitignore  README.md  publicar.sh
.github/workflows/: ci.yml  debug-rede.yml  publicar.yml
backend/: pyproject.toml
backend/radar/: consultas.py  db.py  exportar.py  fontes_registro.py
backend/radar/api/: app.py
backend/radar/ingest/: __main__.py  loader.py  normalizacao.py
backend/radar/ingest/fontes/: camara.py  cldf.py  senado.py
backend/tests/: conftest.py  test_api.py  test_camara.py  test_cldf.py  test_consultas.py  test_db.py  test_exportar.py  test_loader.py  test_normalizacao.py  test_senado.py
backend/tests/fixtures/: ceap_amostra.csv  ceaps_amostra.csv  cldf_pivo.xlsx  cldf_transacional.xlsx  cldf_transacional_2013.xlsx  gerar_cldf.py  senadores_amostra.json
docs/superpowers/: validacao-2026-07-10.md  validacao-cldf-2026-07-12.md
docs/superpowers/plans/: 2026-07-10-radar-politicos.md  2026-07-11-panorama-home.md  2026-07-12-estatisticas-panorama.md  2026-07-12-fonte-cldf.md  2026-07-14-site-estatico.md
docs/superpowers/specs/: 2026-07-10-radar-politicos-design.md  2026-07-11-panorama-home-design.md  2026-07-12-estatisticas-panorama-design.md  2026-07-12-fonte-cldf-design.md  2026-07-14-site-estatico-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-next/: package-lock.json  package.json
frontend-next/src/app/: layout.tsx  page.tsx  sitemap.ts
frontend-next/src/componentes/: Panorama.tsx  Perfil.tsx  (+2 more)
frontend/scripts/: gerar-og.mjs
frontend/src/: App.tsx  index.css  main.tsx
(+28 files in other folders)
