[project]
name = "radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]
